<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:icon="@drawable/home_icon"/>
    <item
        android:id="@+id/scan_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/scan"
        android:icon="@drawable/scan_icon"/>
    <item
        android:id="@+id/history_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/history"
        android:icon="@drawable/history_icon"/>
    <item
        android:id="@+id/profile_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/profile"
        android:icon="@drawable/profile_icon"/>
</menu>